name:                logos
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/patrickt/logos#readme
license:             AllRightsReserved
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           Patrick Thomson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable logos
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Noise
                     , Data.HeightMap
                     , Data.Rect
  default-language:    Haskell2010
  ghc-options:         -threaded
  other-modules:       Paths_logos
  default-extensions:  DataKinds
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadFailDesugaring
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , StandaloneDeriving
                     , StrictData
                     , TypeApplications
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , finite-typelits
                     , fused-effects
                     , grid
                     , hedgehog
                     , lens
                     , random
                     , semilattices
                     , MonadRandom
                     , Noise
                     , vty
