name:                logos
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/patrickt/logos#readme
license:             AllRightsReserved
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           Patrick Thomson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable logos
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Data.HeightMap
                     , Data.Point
                     , Data.Rect
                     , Data.Size
                     , Data.Terrain
                     , Data.World
                     , Logos.App
                     , Logos.Draw
                     , Logos.Event
                     , Logos.State
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -Werror
  other-modules:       Paths_logos
  default-extensions:  DataKinds
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadFailDesugaring
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , StandaloneDeriving
                     , StrictData
                     , TypeApplications
  build-depends:       base >= 4.7 && < 5
                     , async
                     , brick
                     , finite-typelits
                     , fused-effects
                     , fused-effects-lens
                     , grid
                     , hedgehog
                     , lens
                     , random
                     , semilattices
                     , MonadRandom
                     , vector
                     , vty
